--- a/goldenford.yml
+++ b/goldenford.yml
@@ -10,6 +10,7 @@
       environment:
         PIP_BREAK_SYSTEM_PACKAGES: 1
     - geerlingguy.docker
+    - adguard-home
     - bertvv.samba
     - traefik
     - portainer
