--- a/host_vars/goldenford/main.yml
+++ b/host_vars/goldenford/main.yml
@@ -46,14 +46,12 @@ traefik_args: >
   --entrypoints.https.http.tls.domains[0].sans=*.{{ public_domain }}
   --certificatesresolvers.letsencrypt.acme.email={{ vault_email }}
   --certificatesresolvers.letsencrypt.acme.dnschallenge=true
-  --certificatesresolvers.letsencrypt.acme.dnschallenge.provider=duckdns
+  --certificatesresolvers.letsencrypt.acme.dnschallenge.resolvers=193.47.99.5:53,213.133.100.98:53
+  --certificatesresolvers.letsencrypt.acme.dnschallenge.delaybeforecheck=10
+  --certificatesresolvers.letsencrypt.acme.dnschallenge.provider=hetzner
   --certificatesresolvers.letsencrypt.acme.storage=/ssl-certs/acme.json
-
-#  --certificatesresolvers.letsencrypt.acme.dnschallenge.resolvers=193.47.99.5:53,213.133.100.98:53
-#  --certificatesresolvers.letsencrypt.acme.dnschallenge.delaybeforecheck=10
 traefik_env:
   HETZNER_API_KEY: "{{ vault_hetzner_api_key }}"
-  DUCKDNS_TOKEN: "{{ vault_duckdns_token }}"
 traefik_labels:
   traefik.http.routers.api.middlewares: "authelia@docker"
 
@@ -78,9 +76,9 @@ jdownloader_download_dir: "{{ storage_media_dir }}/downloads"
 # role: adguard
 adguard_rewrites:
   - domain: "{{ vault_public_domain }}"
-    answer: "192.168.178.80"
+    answer: "192.168.178.60"
   - domain: "*.{{ vault_public_domain }}"
-    answer: "192.168.178.80"
+    answer: "192.168.178.60"
 
 # githubixx.ansible_role_wireguard
 wireguard_address: "10.10.0.1/24"
