--- a/goldenford.yml
+++ b/goldenford.yml
@@ -10,17 +10,18 @@
       environment:
         PIP_BREAK_SYSTEM_PACKAGES: 1
     - geerlingguy.docker
-    - adguard-home
-    - bertvv.samba
     - traefik
-    - portainer
+    - adguard-home
     - authelia
+    - portainer
     - stash
     - jellyfin
-    - watchtower
     - nzb
     - paperless-ngx
     - photoprism
     - tandoor-recipes
     - shelly-monitoring
     - scrutiny
+    - actual-budget
+    - watchtower
+    - bertvv.samba
