--- a/roles/nextcloud/defaults/main.yml
+++ b/roles/nextcloud/defaults/main.yml
@@ -2,3 +2,9 @@
 service_name: nextcloud
 
 nextcloud_dir: "{{ docker_container_data_root }}/{{ service_name }}"
+nextcloud_app_dir: "{{ nextcloud_dir }}/app"
+nextcloud_app_app_dir: "{{ nextcloud_app_dir }}/app"
+nextcloud_app_data_dir: "{{ nextcloud_app_dir }}/data"
+nextcloud_app_config_dir: "{{ nextcloud_app_dir }}/config"
+
+nextcloud_db_dir: "{{ nextcloud_dir }}/db"
