--- a/roles/nextcloud/tasks/main.yml
+++ b/roles/nextcloud/tasks/main.yml
@@ -11,9 +11,9 @@
           container_name: "{{ service_name }}-app"
           image: nextcloud:27
           volumes:
-            - "{{ nextcloud_dir }}/app/app:/var/www/html"
-            - "{{ nextcloud_dir }}/app/data:/var/www/html/data"
-            - "{{ nextcloud_dir }}/app/config:/var/www/html/config"
+            - "{{ nextcloud_app_app_dir }}:/var/www/html"
+            - "{{ nextcloud_app_data_dir }}:/var/www/html/data"
+            - "{{ nextcloud_app_config_dir }}:/var/www/html/config"
           environment:
             POSTGRES_HOST: db
             POSTGRES_DB: nextcloud
@@ -43,7 +43,7 @@
           container_name: "{{ service_name }}-db"
           restart: unless-stopped
           volumes:
-            - "{{ nextcloud_dir }}/db:/var/lib/postgresql/data"
+            - "{{ nextcloud_db_dir }}:/var/lib/postgresql/data"
           environment:
             POSTGRES_DB: nextcloud
             POSTGRES_USER: nextcloud
@@ -51,18 +51,18 @@
           networks:
             - app
 
-        office:
-          image: collabora/code
-          container_name: "{{ service_name }}-collabora"
-          restart: unless-stopped
-          environment:
-            aliasgroup1: "https://{{ service_name }}.{{ public_domain }}:443"
-          networks:
-            - "{{ traefik_network_name }}"
-          labels:
-            traefik.enable: "true"
-            traefik.http.routers.collabora.rule: "Host(`collabora.{{ public_domain }}`)"
-            traefik.docker.network: "{{ traefik_network_name }}"
+        # office:
+        #   image: collabora/code
+        #   container_name: "{{ service_name }}-collabora"
+        #   restart: unless-stopped
+        #   environment:
+        #     aliasgroup1: "https://{{ service_name }}.{{ public_domain }}:443"
+        #   networks:
+        #     - "{{ traefik_network_name }}"
+        #   labels:
+        #     traefik.enable: "true"
+        #     traefik.http.routers.collabora.rule: "Host(`collabora.{{ public_domain }}`)"
+        #     traefik.docker.network: "{{ traefik_network_name }}"
 
       networks:
         app:
