Add audiobookshelf podcast support

--- a/roles/audiobookshelf/defaults/main.yml
+++ b/roles/audiobookshelf/defaults/main.yml
@@ -5,4 +5,6 @@ audiobookshelf_app_dir: "{{ docker_container_data_root }}/audiobookshelf"
 
 audiobookshelf_app_config_dir: "{{ audiobookshelf_app_dir }}/config"
 audiobookshelf_app_metadata_dir: "{{ audiobookshelf_app_dir }}/metadata"
-audiobookshelf_media_dir: "{{ storage_media_dir }}/audiobooks"
+
+audiobookshelf_audiobook_dir: "{{ storage_media_dir }}/audiobooks"
+audiobookshelf_podcast_dir: "{{ storage_media_dir }}/podcasts"
