--- a/goldenford.yml
+++ b/goldenford.yml
@@ -4,34 +4,92 @@
   become: true
 
   roles:
-    - essentials
-    - geerlingguy.security
+    - role: essentials
+      tags:
+        - essentials
+    - role: geerlingguy.security
+      tags:
+        - security
     - role: geerlingguy.pip
+      tags:
+        - pip
       environment:
         PIP_BREAK_SYSTEM_PACKAGES: 1
-    - geerlingguy.docker
-    - traefik
-    - adguard-home
-    - authelia
-    - portainer
-    - nextcloud
-    - stash
-    - jellyfin
-    - nzb
-    - paperless-ngx
-    - photoprism
-    - tandoor-recipes
-    - shelly-monitoring
-    - scrutiny
-    - actual-budget
-    - watchtower
-    - dufs
-    - audiobookshelf
-    - webtop
-    - navidrome
-    - beets
-    - jdownloader2
-    - bertvv.samba
-    - resticprofile
-    - deezer-downloader
-    - 2fauth
+    - role: geerlingguy.docker
+      tags:
+        - docker
+    - role: traefik
+      tags:
+        - traefik
+    - role: adguard-home
+      tags:
+        - adguard-home
+    - role: authelia
+      tags:
+        - authelia
+    - role: portainer
+      tags:
+        - portainer
+    - role: nextcloud
+      tags:
+        - nextcloud
+    - role: stash
+      tags:
+        - stash
+    - role: jellyfin
+      tags:
+        - jellyfin
+    - role: nzb
+      tags:
+        - nzb
+    - role: paperless-ngx
+      tags:
+        - paperless-ngx
+    - role: photoprism
+      tags:
+        - photoprism
+    - role: tandoor-recipes
+      tags:
+        - tandoor-recipes
+    - role: shelly-monitoring
+      tags:
+        - shelly-monitoring
+    - role: scrutiny
+      tags:
+        - scrutiny
+    - role: actual-budget
+      tags:
+        - actual-budget
+    - role: watchtower
+      tags:
+        - watchtower
+    - role: dufs
+      tags:
+        - dufs
+    - role: audiobookshelf
+      tags:
+        - audiobookshelf
+    - role: webtop
+      tags:
+        - webtop
+    - role: navidrome
+      tags:
+        - navidrome
+    - role: beets
+      tags:
+        - beets
+    - role: jdownloader2
+      tags:
+        - jdownloader2
+    - role: bertvv.samba
+      tags:
+        - bertvv.samba
+    - role: resticprofile
+      tags:
+        - resticprofile
+    - role: deezer-downloader
+      tags:
+        - deezer-downloader
+    - role: 2fauth
+      tags:
+        - 2fauth
