--- a/roles/deezer-downloader/tasks/main.yml
+++ b/roles/deezer-downloader/tasks/main.yml
@@ -9,7 +9,7 @@
     restart_policy: unless-stopped
     labels:
       traefik.enable: "true"
-      traefik.http.routers.deezer.rule: "Host(`deezer.{{ public_domain }}`)"
+      traefik.http.routers.deezer.rule: "Host(`deezer.{{ public_domain }}`)  && {{ traefik_internal_client_ip }}"
       traefik.http.services.deezer.loadbalancer.server.port: "5000"
     env:
       DEEZER_COOKIE_ARL: "{{ vault_deezer_arl_cookie }}"
