migrate to tasmota shelly

--- a/roles/shelly-monitoring/files/telegraf.conf
+++ b/roles/shelly-monitoring/files/telegraf.conf
@@ -2,24 +2,27 @@
   interval = "1s"
   omit_hostname = true
 #  debug = true
-  
 [[inputs.mqtt_consumer]]
   servers = ["tcp://mosquitto:1883"]
   name_override = "shelly"
 
   topics = [
-    "shellies/shellyplugs/relay/0/power",
-    "shellies/shellyplugs/relay/0/energy",
+    "tele/tasmota_829866/SENSOR"
   ]
 
   tagexclude = ["topic"]
+  data_format = "json_v2"
 
-  data_format = "value"
-  data_type = "float"
+  [[inputs.mqtt_consumer.json_v2]]
+    [[inputs.mqtt_consumer.json_v2.field]]
+      path = "ENERGY.Power"
+
+    [[inputs.mqtt_consumer.json_v2.field]]
+      path = "ENERGY.Total"
 
   [[inputs.mqtt_consumer.topic_parsing]]
-    topic = "shellies/shellyplugs/relay/0/+"
-    tags = "_/device/_/_/sensor"
+    topic = "tele/tasmota_829866/SENSOR"
+    tags = "_/device/_"
 
 [[inputs.mqtt_consumer]]
   servers = ["tcp://mosquitto:1883"]
