dont pull shelly metrics over mqtt

--- a/roles/shelly-monitoring/files/telegraf.conf
+++ b/roles/shelly-monitoring/files/telegraf.conf
@@ -2,27 +2,28 @@
   interval = "1s"
   omit_hostname = true
 #  debug = true
-[[inputs.mqtt_consumer]]
-  servers = ["tcp://mosquitto:1883"]
-  name_override = "shelly"
 
-  topics = [
-    "tele/tasmota_829866/SENSOR"
-  ]
+# [[inputs.mqtt_consumer]]
+#   servers = ["tcp://mosquitto:1883"]
+#   name_override = "shelly"
 
-  tagexclude = ["topic"]
-  data_format = "json_v2"
+#   topics = [
+#     "tele/tasmota_829866/SENSOR"
+#   ]
 
-  [[inputs.mqtt_consumer.json_v2]]
-    [[inputs.mqtt_consumer.json_v2.field]]
-      path = "ENERGY.Power"
+#   tagexclude = ["topic"]
+#   data_format = "json_v2"
 
-    [[inputs.mqtt_consumer.json_v2.field]]
-      path = "ENERGY.Total"
+#   [[inputs.mqtt_consumer.json_v2]]
+#     [[inputs.mqtt_consumer.json_v2.field]]
+#       path = "ENERGY.Power"
 
-  [[inputs.mqtt_consumer.topic_parsing]]
-    topic = "tele/tasmota_829866/SENSOR"
-    tags = "_/device/_"
+#     [[inputs.mqtt_consumer.json_v2.field]]
+#       path = "ENERGY.Total"
+
+#   [[inputs.mqtt_consumer.topic_parsing]]
+#     topic = "tele/tasmota_829866/SENSOR"
+#     tags = "_/device/_"
 
 [[inputs.mqtt_consumer]]
   servers = ["tcp://mosquitto:1883"]
