--- a/roles/authelia/templates/configuration.yml
+++ b/roles/authelia/templates/configuration.yml
@@ -5,7 +5,7 @@
 
 # This secret can also be set using the env variables AUTHELIA_JWT_SECRET_FILE
 jwt_secret: yKoJddqzKVY2zvmVBAtiKYFSyqgq3cYo9y4uZDMg5az3mjzLcYVJnWH75vqjzDzQ
-default_redirection_url: https://auth.{{ public_domain }}
+default_redirection_url: "https://auth.{{ public_domain }}"
 
 server:
   host: 0.0.0.0
@@ -15,7 +15,7 @@ log:
   level: info
 
 totp:
-  issuer: {{ public_domain }}
+  issuer: "{{ public_domain }}"
 
 # duo_api:
 #  hostname: api-123456789.example.com
@@ -30,11 +30,11 @@ authentication_backend:
 access_control:
   default_policy: two_factor
   rules:
-    - domain: "sabnzbd.{{public_domain}}"
+    - domain: "sabnzbd.{{ public_domain }}"
       policy: bypass
       resources:
-        - '^/sabnzbd/api'
-    - domain: "stash.{{public_domain}}"
+        - "^/sabnzbd/api"
+    - domain: "stash.{{ public_domain }}"
       policy: bypass
       resources:
         - '^\/scene\/\d+\/screenshot\?t=\d+'
@@ -42,19 +42,12 @@ access_control:
 
 session:
   name: authelia_session
-  domain: {{ public_domain }}
+  domain: "{{ public_domain }}"
   same_site: lax
   secret: j97PjFn8LczPfq4HKMrckR3WzsgZPYhaD92Q3hzE7Es5wUmG8csEucE8cHTWLMMV
   expiration: 1h
   inactivity: 5m
-  remember_me_duration:  1M
-
-
-#  redis:
-#    host: redis
-#    port: 6379
-#    # This secret can also be set using the env variables AUTHELIA_SESSION_REDIS_PASSWORD_FILE
-#    # password: authelia
+  remember_me_duration: 1M
 
 regulation:
   max_retries: 3
@@ -70,3 +63,28 @@ notifier:
   disable_startup_check: false
   filesystem:
     filename: /config/notification.txt
+# identity_providers:
+#   oidc:
+#     hmac_secret:
+#     issuer_certificate_chain:
+#     issuer_private_key:
+#     access_token_lifespan: 1h
+#     authorize_code_lifespan: 1m
+#     id_token_lifespan: 1h
+#     refresh_token_lifespan: 90m
+#     enable_client_debug_messages: false
+#     enforce_pkce: public_clients_only
+#     clients:
+#       - id: grafana
+#         description: Grafana
+#         secret: "$argon2id$v=19$m=65536,t=3,p=4$l19OIyaEZjwj1MQfMSJqyA$4oN554Y96IVyXPJxNz9hDZ/+hUb3i1XAMZfzcwePovU"
+#         public: false
+#         authorization_policy: two_factor
+#         redirect_uris:
+#           - "https://grafana.{{ public_domain }}/login/generic_oauth"
+#         scopes:
+#           - openid
+#           - profile
+#           - groups
+#           - email
+#         userinfo_signing_algorithm: none
