--- a/roles/2fauth/tasks/main.yml
+++ b/roles/2fauth/tasks/main.yml
@@ -7,6 +7,11 @@
     group: 1000
     mode: "700"
 
+- name: Get container data on traefik
+  docker_container_info:
+    name: traefik
+  register: traefik
+
 - name: "Ensure {{ service_name }} is running as a docker container"
   community.docker.docker_container:
     name: "{{ service_name }}"
@@ -22,6 +27,8 @@
     env:
       APP_URL: "https://{{ subdomain_name }}.{{ public_domain }}"
       AUTHENTICATION_GUARD: "reverse-proxy-guard"
+      TRUSTED_PROXIES: "{{ traefik.container.NetworkSettings.Networks.traefik.IPAddress }}"
+      ASSET_URL: "https://{{ subdomain_name }}.{{ public_domain }}"
       AUTH_PROXY_HEADER_FOR_USER: "Remote-User"
       AUTH_PROXY_HEADER_FOR_EMAIL: "Remote-Email"
       APP_KEY: "{{ vault_twofauth_app_key }}"
