fix navidrome reverseproxywhitelist

--- a/roles/navidrome/tasks/main.yml
+++ b/roles/navidrome/tasks/main.yml
@@ -1,9 +1,4 @@
 ---
-- name: Get container data on traefik
-  docker_container_info:
-    name: traefik
-  register: traefik
-
 - name: "Ensure {{ service_name }} is running as a docker container"
   community.docker.docker_container:
     name: "{{ service_name }}"
@@ -22,6 +17,6 @@
       ND_SPOTIFY_SECRET: "{{ vault_navidrome_spotify_client_secret }}"
       ND_LASTFM_APIKEY: "{{ vault_navidrome_lastfm_api_key }}"
       ND_LASTFM_SECRET: "{{ vault_navidrome_lastfm_shared_secret }}"
-      ND_REVERSEPROXYWHITELIST: "{{ traefik.container.NetworkSettings.Networks.traefik.IPAddress }}/32"
+      ND_REVERSEPROXYWHITELIST: "172.18.0.0/16"
     networks:
       - name: "{{ traefik_network_name }}"
