change beets coverart precedence

--- a/roles/beets/files/config.yaml
+++ b/roles/beets/files/config.yaml
@@ -14,7 +14,7 @@ import:
 
 fetchart:
   cover_format: JPEG
-  sources: itunes coverart amazon albumart filesystem
+  sources: coverart itunes amazon albumart filesystem
   enforce_ratio: yes
 
 zero:
