--- a/roles/nzb/tasks/main.yml
+++ b/roles/nzb/tasks/main.yml
@@ -98,26 +98,26 @@
             - "traefik.http.services.radarr.loadbalancer.server.port=7878"
             - "traefik.docker.network={{ traefik_network_name }}"
 
-        lidarr:
-          container_name: lidarr
-          image: lscr.io/linuxserver/lidarr:latest
-          restart: unless-stopped
-          volumes:
-            - "{{ nzb_lidarr_config_dir }}:/config"
-            - "{{ nzb_data_root }}:/data"
-          networks:
-            - nzb
-            - "{{ traefik_network_name }}"
-          environment:
-            TZ: Europe/Berlin
-            PUID: "{{ docker_container_puid }}"
-            PGID: "{{ docker_container_pgid }}"
-          labels:
-            - "traefik.enable=true"
-            - "traefik.http.routers.lidarr.rule=Host(`lidarr.{{ public_domain }}`) && {{ traefik_internal_client_ip }}"
-            - "traefik.http.routers.lidarr.middlewares=authelia@docker"
-            - "traefik.http.services.lidarr.loadbalancer.server.port=8686"
-            - "traefik.docker.network={{ traefik_network_name }}"
+        # lidarr:
+        #   container_name: lidarr
+        #   image: lscr.io/linuxserver/lidarr:latest
+        #   restart: unless-stopped
+        #   volumes:
+        #     - "{{ nzb_lidarr_config_dir }}:/config"
+        #     - "{{ nzb_data_root }}:/data"
+        #   networks:
+        #     - nzb
+        #     - "{{ traefik_network_name }}"
+        #   environment:
+        #     TZ: Europe/Berlin
+        #     PUID: "{{ docker_container_puid }}"
+        #     PGID: "{{ docker_container_pgid }}"
+        #   labels:
+        #     - "traefik.enable=true"
+        #     - "traefik.http.routers.lidarr.rule=Host(`lidarr.{{ public_domain }}`) && {{ traefik_internal_client_ip }}"
+        #     - "traefik.http.routers.lidarr.middlewares=authelia@docker"
+        #     - "traefik.http.services.lidarr.loadbalancer.server.port=8686"
+        #     - "traefik.docker.network={{ traefik_network_name }}"
 
         bazarr:
           container_name: bazarr
